k8s_files/deploy_backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: 3-tier-app
  labels:
    tier: backend
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%
  selector:
    matchLabels:
      tier: backend
  template:
    metadata:
      labels:
        tier: backend
    spec:
      containers:
      - name: api
        image: 949638458026.dkr.ecr.us-east-2.amazonaws.com/3tier-backend-registry:7
        imagePullPolicy: Always
        ports:
        - containerPort: 3500
        livenessProbe:
          httpGet:
            path: /ok
            port: 3500
          initialDelaySeconds: 2
          periodSeconds: 5
        readinessProbe:
          httpGet:
             path: /ok
             port: 3500
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 1
